test/fail/suggest-unprivileged.mo
import Prim "mo:⛔";

// should not suggest @cycles because privileged

cycles;
